@@ -310,6 +310,12 @@
  background-position: 5px -344px;
 }
 
+#rcmAddressMenu .exportall a span,
+#rcmAddressMenu .exportsel a span
+{
+ background-position: 5px -370px;
+}
+
 #rcmContextMenu ul.folders li a span,
 #rcmAddressMenu ul.folders li a span
 {
