@@ -1,6 +1,7 @@
 Roundcube Webmail ContextMenu
 =============================
 
+ * Add export option to address book menu
  * Add remove selected contacts from group option
  * Rename default skin to classic (c40419bdfe)
  * rcube_ui > rcube_utils (r6091)
